--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "axios": "^0.19.2",
     "react": "16.8.6",
     "react-native": "0.60.0",
+    "react-native-dropdown-picker": "^3.0.5",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.5",
-    "react-native-screens": "^2.9.0"
+    "react-native-screens": "^2.9.0",
+    "react-native-vector-icons": "^6.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
