--- a/ios/Podfile
+++ b/ios/Podfile
@@ -30,6 +30,8 @@ target 'VapeBlunt' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
   target 'VapeBluntTests' do
     inherit! :search_paths
     # Pods for testing
