--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "test": "jest",
     "lint": "eslint ."
   },
@@ -17,7 +19,7 @@
     "@react-navigation/stack": "^5.5.1",
     "axios": "^0.19.2",
     "react": "16.8.6",
-    "react-native": "0.60.0",
+    "react-native": "^0.63.4",
     "react-native-dropdown-picker": "^3.0.5",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.9.0",
